SONAR-18657 Do not use Elastic Search for /api/users/search