@@ -34,22 +34,21 @@ import org.sonar.api.server.ws.WebService;
 import org.sonar.api.utils.Paging;
 import org.sonar.db.DbClient;
 import org.sonar.db.DbSession;
+import org.sonar.db.organization.OrganizationMemberDao;
 import org.sonar.db.permission.OrganizationPermission;
 import org.sonar.db.user.UserDto;
+import org.sonar.db.user.UserQuery;
 import org.sonar.server.es.SearchOptions;
-import org.sonar.server.es.SearchResult;
 import org.sonar.server.issue.AvatarResolver;
 import org.sonar.server.management.ManagedInstanceService;
 import org.sonar.server.user.UserSession;
-import org.sonar.server.user.index.UserDoc;
-import org.sonar.server.user.index.UserIndex;
-import org.sonar.server.user.index.UserQuery;
 import org.sonarqube.ws.Users;
 import org.sonarqube.ws.Users.SearchWsResponse;
 
 import static com.google.common.base.MoreObjects.firstNonNull;
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Strings.emptyToNull;
+import static java.util.Comparator.comparing;
 import static java.lang.Boolean.TRUE;
 import static java.util.Optional.ofNullable;
 import static org.sonar.api.server.ws.WebService.Param.PAGE;
@@ -70,18 +69,18 @@ public class SearchAction implements UsersWsAction {
   private static final int MAX_PAGE_SIZE = 500;
 
   private final UserSession userSession;
-  private final UserIndex userIndex;
   private final DbClient dbClient;
   private final AvatarResolver avatarResolver;
   private final ManagedInstanceService managedInstanceService;
+  private final OrganizationMemberDao organizationMemberDao;
 
-  public SearchAction(UserSession userSession, UserIndex userIndex, DbClient dbClient, AvatarResolver avatarResolver,
-    ManagedInstanceService managedInstanceService) {
+  public SearchAction(UserSession userSession, DbClient dbClient, AvatarResolver avatarResolver,
+    ManagedInstanceService managedInstanceService, OrganizationMemberDao organizationMemberDao) {
     this.userSession = userSession;
-    this.userIndex = userIndex;
     this.dbClient = dbClient;
     this.avatarResolver = avatarResolver;
     this.managedInstanceService = managedInstanceService;
+    this.organizationMemberDao = organizationMemberDao;
   }
 
   @Override
@@ -92,6 +91,7 @@ public class SearchAction implements UsersWsAction {
         " For Organization Admins, list of users part of the organization(s) are returned")
       .setSince("3.6")
       .setChangelog(
+        new Change("10.0", "'q' parameter values is now always performing a case insensitive match"),
         new Change("10.0", "Response includes 'managed' field."),
         new Change("9.9", "Organization Admin can access Email and Last Connection Info of all members of the "
           + "organization. API is accessible only for System Administrators or Organization Administrators"),
@@ -109,17 +109,7 @@ public class SearchAction implements UsersWsAction {
     action.createParam(TEXT_QUERY)
       .setMinimumLength(2)
       .setDescription("Filter on login, name and email.<br />" +
-        "This parameter can either be case sensitive and perform an exact match, or case insensitive and perform a partial match (contains), depending on the scenario:<br />" +
-        "<ul>" +
-        "  <li>" +
-        "    If the search query is <em>less or equal to 15 characters</em>, then the query is <em>case insensitive</em>, and will match any login, name, or email, that " +
-        "    <em>contains</em> the search query." +
-        "  </li>" +
-        "  <li>" +
-        "    If the search query is <em>greater than 15 characters</em>, then the query becomes <em>case sensitive</em>, and will match any login, name, or email, that " +
-        "    <em>exactly matches</em> the search query." +
-        "  </li>" +
-        "</ul>");
+        "This parameter can either perform an exact match, or a partial match (contains), it is case insensitive.");
     action.createParam(DEACTIVATED_PARAM)
       .setSince("9.7")
       .setDescription("Return deactivated users instead of active users")
@@ -135,41 +125,51 @@ public class SearchAction implements UsersWsAction {
   }
 
   private Users.SearchWsResponse doHandle(SearchRequest request) {
-    boolean isSystemAdmin = userSession.checkLoggedIn().isSystemAdministrator();
-    boolean showEmailAndLastConnectionInfo = false;
-    var userQuery = UserQuery.builder();
-    SearchOptions options = new SearchOptions().setPage(request.getPage(), request.getPageSize());
-    if (!isSystemAdmin) {
-      List<String> userOrganizations =
-        userIndex.search(UserQuery.builder().setActive(true).setTextQuery(userSession.getLogin()).build(),
-          options).getDocs().get(0).organizationUuids();
-      var orgsWithUserAsAdmin =
-        userOrganizations.stream().filter(o -> userSession.hasPermission(OrganizationPermission.ADMINISTER, o))
-          .collect(
-            Collectors.toList());
-      if (!orgsWithUserAsAdmin.isEmpty()) {
-        userQuery.addOrganizationUuids(orgsWithUserAsAdmin);
-        showEmailAndLastConnectionInfo = true;
-      } else {
-        throw insufficientPrivilegesException();
-      }
-    }
-    SearchResult<UserDoc> result = userIndex.search(
-      userQuery.setActive(!request.isDeactivated()).setTextQuery(request.getQuery()).build(), options);
+    UserQuery.UserQueryBuilder userQueryBuilder = buildUserQuery(request);
     try (DbSession dbSession = dbClient.openSession(false)) {
-      List<String> logins = result.getDocs().stream().map(UserDoc::login).collect(toList());
+      boolean isSystemAdmin = userSession.checkLoggedIn().isSystemAdministrator();
+      boolean showEmailAndLastConnectionInfo = false;
+      if (!isSystemAdmin) {
+        Set<String> userOrganizations = organizationMemberDao.selectOrganizationUuidsByUser(dbSession, userSession.getUuid());
+        var orgsWithUserAsAdmin = userOrganizations.stream()
+            .filter(o -> userSession.hasPermission(OrganizationPermission.ADMINISTER, o))
+            .toList();
+        if (!orgsWithUserAsAdmin.isEmpty()) {
+          userQueryBuilder.addOrganizationUuids(orgsWithUserAsAdmin);
+          showEmailAndLastConnectionInfo = true;
+        } else {
+          throw insufficientPrivilegesException();
+        }
+      }
+
+      UserQuery userQuery = userQueryBuilder.build();
+      List<UserDto> users = fetchUsersAndSortByLogin(request, dbSession, userQuery);
+      int totalUsers = dbClient.userDao().countUsers(dbSession, userQuery);
+
+      List<String> logins = users.stream().map(UserDto::getLogin).collect(toList());
       Multimap<String, String> groupsByLogin = dbClient.groupMembershipDao().selectGroupsByLogins(dbSession, logins);
-      List<UserDto> users = dbClient.userDao().selectByOrderedLogins(dbSession, logins);
       Map<String, Integer> tokenCountsByLogin = dbClient.userTokenDao().countTokensByUsers(dbSession, users);
       Map<String, Boolean> userUuidToIsManaged = managedInstanceService.getUserUuidToManaged(dbSession, getUserUuids(users));
-      Paging paging = forPageIndex(request.getPage()).withPageSize(request.getPageSize())
-        .andTotal((int) result.getTotal());
+      Paging paging = forPageIndex(request.getPage()).withPageSize(request.getPageSize()).andTotal(totalUsers);
       return buildResponse(users, groupsByLogin, tokenCountsByLogin, userUuidToIsManaged, paging, showEmailAndLastConnectionInfo);
     }
   }
 
   private static Set<String> getUserUuids(List<UserDto> users) {
     return users.stream().map(UserDto::getUuid).collect(Collectors.toSet());
+  }
+
+  private static UserQuery.UserQueryBuilder buildUserQuery(SearchRequest request) {
+    return UserQuery.builder()
+        .isActive(!request.isDeactivated())
+        .searchText(request.getQuery());
+  }
+
+  private List<UserDto> fetchUsersAndSortByLogin(SearchRequest request, DbSession dbSession, UserQuery userQuery) {
+    return dbClient.userDao().selectUsers(dbSession, userQuery, request.getPage(), request.getPageSize())
+        .stream()
+        .sorted(comparing(UserDto::getLogin))
+        .toList();
   }
 
   private SearchWsResponse buildResponse(List<UserDto> users, Multimap<String, String> groupsByLogin, Map<String, Integer> tokenCountsByLogin, Map<String, Boolean> userUuidToIsManaged, Paging paging, boolean showEmailAndLastConnectionInfo) {
@@ -234,12 +234,10 @@ public class SearchAction implements UsersWsAction {
       this.deactivated = builder.deactivated;
     }
 
-    @CheckForNull
     public Integer getPage() {
       return page;
     }
 
-    @CheckForNull
     public Integer getPageSize() {
       return pageSize;
     }
@@ -268,12 +266,12 @@ public class SearchAction implements UsersWsAction {
       // enforce factory method use
     }
 
-    public Builder setPage(@Nullable Integer page) {
+    public Builder setPage(Integer page) {
       this.page = page;
       return this;
     }
 
-    public Builder setPageSize(@Nullable Integer pageSize) {
+    public Builder setPageSize(Integer pageSize) {
       this.pageSize = pageSize;
       return this;
     }
